# restful-geyser-plugin

./: Cargo.toml  runs.sh
plugin-config/: accountsdb-plugin-config.json
src/: lib.rs
