[package]
name = "compressed-nft-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.11"
async-trait = "0.1.53"
solana-sdk = { version ="~1.14" }
solana-transaction-status = { version = "~1.14" }
solana-geyser-plugin-interface = { version = "~1.14" }
solana-logger = { version = "~1.14" }
thiserror = "1.0.30"
base64 = "0.21.0"
lazy_static = "1.4.0"
bs58 = "0.4.0"
bytemuck = "1.7.2"
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
tokio = { version = "1.23.0", features = ["full"] }

[dependencies.num-integer]
version = "0.1.44"
default-features = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]